eZ publish changelog:
---------------------

Changes from 2.2.2 to 2.2.3
---------------------------
* Removed dependency to mysql_escape_string() when using postgresql
* Fixed missing discount column in cart and checkout.
* Fixed wrong computation of VAT/Tax in options
* Fixed wrong display of prices in product lists.
* Fixed wrong lookup of price groups in prices.

Changes from 2.2.1 final to 2.2.2
---------------------------------
* Fixed cookie problem with some IE browsers
* Added support for libxml xml parsing in ezxmlrpc
* Added menubox in eZ search
* Fixed display of $10 like text correctly
* Fixed prefix on external link on system check
* Fixed bug first time hosts are stored
* Fixed bugs in imagecatalogue
* Added navigator for unassigned images.

Changes from 2.2 final to 2.2.1
-------------------------------
* Added delete buttons in eZ mediacatalogue
* Fixed correct storing of stats first time a page is visited.
* Fixed bug in storing sizes of textlines in form
* Added setting for user defined stopword frequency
* Added check for empty sitedesign
* Added support for libxml parsing in newsfeed
* Fixed a quantity bug in eZ trade
* Fixed a voucher bug
* Fixed media bugs in eZ mediacatalogue
* Fixed rewrite rule for eZ mediacatalogue
* Fixed bug with attachments in eZMail.
* Userlist in eZBulkmail now also lists when using useEZUser=enabled
* Assigning multiple ownergroups in eZBug now work.
* First time ownergroup assignment in eZBug works.
* Fixed bug when editing images/patches in eZBug
* Fixed bug with templates in eZBulkmail
* Fixed problem with editing link categories.

Changes from 2.2 Beta 2 to 2.2 Pre
-----------------------------------
* Added support for radiobuttons, checkboxes, dropdown lists and multiple choice lists
* Search in contact now searches in online addresses and phone numbers
* Fixed Bug count, bug archive on user side.
* Fixed Bulkmail user login
* Lots of minor bugfixes

Changes from 2.2 Beta 1 to 2.2 Beta 2